Creating adminPanel, NotFound page, Toast notif, Rate limiting on login